syntax = "proto2";

package battleship;

message Initialize {
	required string g_captcha_response = 1;
}

message Flag {
	required string flag = 1;
}

message Point {
	required uint32 row = 1;
	required uint32 col = 2;
}

message Missile {
	required Point target = 1;
}

message Ship {
	enum Orientation {
		DOWN = 0;
		RIGHT = 1;
	};
	required Point start = 1;
	required Orientation orientation = 2;
	required uint32 length = 3;
}

message MissileResult {
	enum MissileResult {
		HIT = 0;
		MISS = 1;
	}
	required MissileResult missile_result = 1;
	optional Ship ship_sunk = 2;
}

message Board {
	required uint32 width = 1;
	required uint32 height = 2;
	repeated Ship ships = 3;
}

